seaqt/QtNetwork/gen_qsslcertificateextension.h

class QSslCertificateExtension;
class QVariant;
typedef struct QSslCertificateExtension QSslCertificateExtension;
typedef struct QVariant QVariant;
QSslCertificateExtension* QSslCertificateExtension_new();
QSslCertificateExtension* QSslCertificateExtension_new2(QSslCertificateExtension* other);
void QSslCertificateExtension_operatorAssign(QSslCertificateExtension* self, QSslCertificateExtension* other);
void QSslCertificateExtension_swap(QSslCertificateExtension* self, QSslCertificateExtension* other);
struct miqt_string QSslCertificateExtension_oid(const QSslCertificateExtension* self);
struct miqt_string QSslCertificateExtension_name(const QSslCertificateExtension* self);
QVariant* QSslCertificateExtension_value(const QSslCertificateExtension* self);
bool QSslCertificateExtension_isCritical(const QSslCertificateExtension* self);
bool QSslCertificateExtension_isSupported(const QSslCertificateExtension* self);
void QSslCertificateExtension_delete(QSslCertificateExtension* self);